Create New Docs Structure,  Update Configurations - Create new navbar and sidebars - Update footer - Update index.js - Update CSS

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,15 @@
   --ifm-color-primary-lightest: #2b7ce0;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.home {
+  color: black;
+}
+
+[data-theme='dark'] .home {
+  color: white;
+}
+
+[data-theme='dark'] .landing {
+  color: white;
+}
